--- a/app/globals.css
+++ b/app/globals.css
@@ -12,9 +12,9 @@
   }
   
   body {
-    color: #292929;
+    color: #282828;
     overflow-x: hidden;
-    background: #ffffff;
+    background: #FCFCFC;
   }
   body::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -35,4 +35,7 @@
   li {
     list-style: none;
     cursor: pointer;
+  }
+  .header input[name="search"]::placeholder {
+    color: #ffff;
   }
