--- a/app/globals.css
+++ b/app/globals.css
@@ -39,3 +39,17 @@
   .header input[name="search"]::placeholder {
     color: #ffff;
   }
+
+  @keyframes marquee {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .animate-marquee {
+    animation: marquee 20s linear infinite;
+  }
+  
